# kernel-arm-minimal

./: CMakeLists.txt  Makefile  README.md
etc/: main.ld
src/: main.c  startup.s
